k8s/transmission/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: web-interfaace
      protocol: TCP
      port: 9091
      targetPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: transmission-0
  ports:
    - name: p2p-tcp
      protocol: TCP
      port: 51413
      targetPort: 51413
    - name: p2p-udp
      protocol: UDP
      port: 51413
      targetPort: 51413
