k8s/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  rules:
  - host: media.faircloth.ca
    http:
      paths:
      - path: /transmission
        pathType: ImplementationSpecific
        backend:
          service:
            name: transmission
            port:
              number: 9091
